# odin-declarative-download

./: .gitignore  Cargo.toml
src/: download.rs  downloader.rs  lib.rs
tests/: test-main.rs
