[package]
name = "declartive-download"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.12.4", features = ["stream"] }
tokio = {version = "1.38.0", features = ["full"]}
queues = "1.0.2"
zip-extract = "0.1.3"
base64 = "0.22.1"
json = "0.12.4"
log = "0.4.21"
